--- a/AndroidOpenGlTest/app/src/main/res/layout/activity_main.xml
+++ b/AndroidOpenGlTest/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,15 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
+    <io.github.landerlyoung.androidopengltest.MyGlSurfaceView
+        android:id="@+id/my_gl_surface_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
             android:id="@+id/sample_text"
             android:layout_width="wrap_content"
