--- a/AndroidDemo/app/src/main/res/layout/activity_main.xml
+++ b/AndroidDemo/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,14 @@
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
+      app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:text="Hello"
+          android:gravity="center"
+          android:textSize="40sp" />
+    </io.github.landerlyoung.demo.AlphaGradientFrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
