--- a/AndroidOpenGlTest/app/src/main/res/layout/activity_main.xml
+++ b/AndroidOpenGlTest/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,12 @@
         android:id="@+id/my_gl_surface_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHeight_percent="0.5"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 
     <TextView
             android:id="@+id/sample_text"
